added responsive blogs with order

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,14 @@
 }
 
 .content {
-    background-color: lightgrey;
+    background-color: lightsalmon;
+    border: 1px solid black;
+    height: 400px;
+    width: 300px;
+}
+
+.blog {
+    background-color: lightpink;
     border: 1px solid black;
     height: 400px;
     width: 300px;
